<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013-2014 Jeroen Gorter <Lowerland@hotmail.com>

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">S4-Tweaker</string>
    <string name="version">Version 1.3.1</string>
    <string name="version_small">v1.3.1</string>
    <string name="empty_string"></string>
    <string name="no_root_access">ROOT ACCESS NEEDED</string>
    <string name="no_root_alert_body">"Looks like this device ,
isn't rooted or don't have access to root.

Root Access is REQUIRED for this app.
"</string>
    <string name="compatibility_alert_title">Some Options are disabled</string>
    <string name="compatibility_alert_body">"Uncompatible kernel options

HOWTO Solve this issue:
Update or Install latest
DreamKernel / Agat_GS4 Kernel
"</string>
    <string name="disabled_option_text">Not Supported</string>
    <string name="no_sd_card">No SD card inserted</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="disable_popup_text">Don\'t show again</string>
    <string name="onboot_msg">Applying Tweaks</string>
    <string name="action_settings">Settings</string>
    <string name="maintext">S4 Tweaker</string>
    <string name="title_main">S4 Tweaker for Dreamkernel</string>
    <string name="menu_about">About S4 Tweaker</string>
    <string name="menu_soundtweaks">Sound Tweaks</string>
    <string name="menu_misc_tweaks">Misc Tweaks</string>
    <string name="menu_cpu_tweaks">Cpu Tweaks</string>
    <string name="menu_report_bug">Report A Bug</string>
    <string name="menu_system_info">System Info</string>
    <string name="cpu_governor">Governor</string>
    <string name="current_cpu_governor">CPU Governor</string>
    <string name="set_cpu_governor">Set CPU Governor:</string>
    <string name="cpu_freq_scaling_title">CPU Frequency Scaling</string>
    <string name="min_frequency_scaling">Min Frequency Scaling</string>
    <string name="set_freq_scaling_min">Set Min Scaling Freq:</string>
    <string name="max_fequency_scaling">Max Frequency Scaling</string>
    <string name="set_freq_scaling_max">Set Max Scaling Freq:</string>
    <string name="usb_fast_charge">USB Fast Charge</string>
    <string name="text_dyn_file_sys_sync">Dynamic File System Sync</string>
    <string name="text_display_power_reduce">Display Power Reduce</string>
    <string name="current_usb_fast_charge">Current USB Fast Charge</string>
    <string name="set_usb_fast_charge">Set USB Fast Charge</string>
    <string name="io_scheduler">I/O-Schedulers</string>
    <string name="internal">Set Int. Scheduler:</string>
    <string name="text_Internal_Scheduler">Internal Scheduler</string>
    <string name="text_External_Scheduler">External Scheduler</string>
    <string name="external">Set Ext. Scheduler:</string>
    <string name="current_int">Current Int. Scheduler:</string>
    <string name="current_ext">Current Ext. Scheduler:</string>
    <string name="spinner_internal">internalspinner</string>
    <string name="spinner_external">externalspinner</string>
    <string name="vibrator_intensity">Vibrator Intensity</string>
    <string name="set_on_boot">Set On Boot</string>
    <string name="gain_control">Gain Control</string>
    <string name="gpl_speaker_gain">gpl Speaker Gain:</string>
    <string name="gpl_mic_gain">gpl Mic Gain:</string>
    <string name="gpl_cam_mic_gain">gpl Cam Mic Gain:</string>
    <string name="gpl_headphone_gain">gpl Headphone Gain:</string>
    <string name="gpl_hdmi_spkr_gain">gpl Hdmi Spkr Gain:</string>
    <string name="gpl_headset_mic_gain">gpl Headset Mic Gain:</string>
    <string name="si_kernel_version">Kernel version</string>
    <string name="si_hardware_info">Hardware info</string>
    <string name="si_cpu_info">CPU/HardwareInfo</string>
    <string name="si_cpu_status">Status</string>
    <string name="si_cpu_freq">Frequency</string>
    <string name="si_cpu_online">Online</string>
    <string name="si_cpu_offline">Offline</string>
    <string name="si_cpu_temp_freq">2268000</string>
    <string name="si_cpu1">Cpu 1:</string>
    <string name="si_cpu2">Cpu 2:</string>
    <string name="si_cpu3">Cpu 3:</string>
    <string name="si_cpu4">Cpu 4:</string>
    <string name="si_refreshes_cpu">Cpu stats refreshes each second</string>
    <string name="si_gcc_version">GCC version</string>
    <string name="si_kernel_cmdline">kernel commandline</string>
    <string name="about_app_name">DreamKernel / AgatKernel</string>
    <string name="about_coders_app">App Coding:</string>
    <string name="about_lowerland">Lowerland</string>
    <string name="email_lowerland">lowerland@hotmail.com</string>
    <string name="about_dreamkernel">DreamKernel, Custom kernel</string>
    <string name="about_dreamkernel2">Samsung Galaxy S4 LTE (GT-I9505)</string>
    <string name="about_talustus">Talustus</string>
    <string name="email_talustus">talustus@dream-irc.de</string>
    <string name="website_talustus">http://www.dream-irc.de</string>
    <string name="about_agatskernel">AGAT_GS4, Custom kernel</string>
    <string name="about_agatskernel2">"Samsung Galaxy S4 LTE (SPH-L720)"</string>
    <string name="about_agat">Agat</string>
    <string name="email_agat">agat@agat63.com</string>
    <string name="website_agat"></string>
    <string name="about_coding_kernel">Kernel Maintainer:</string>
    <string name="donate_button">Donate Button</string>
    <string name="donate_text">Please buy me a cup of Coffee  :-)</string>
    <string name="bugreport_name">Name (Optional)</string>
    <string name="bugreport_name_hint">Your name</string>
    <string name="bugreport_email">Email Address (Optional)</string>
    <string name="bugreport_email_hint">Your Email address</string>
    <string name="bugreport_hint">Describe your problem</string>
    <string name="bugreport_btn_submit">Submit Bug Report</string>
    <string name="bugreport_msg">Message:</string>

</resources>