<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
        android:title="@string/title_main">

     <PreferenceScreen
        android:title="@string/menu_soundtweaks"
        android:icon="@drawable/ic_soundtweaks">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="pkg.talu.lowa.s4.tweaker"
            android:targetClass="pkg.talu.lowa.s4.tweaker.soundtweaks.SoundTweaks" />
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/menu_about"
        android:icon="@drawable/ic_about">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="pkg.talu.lowa.s4.tweaker"
            android:targetClass="pkg.talu.lowa.s4.tweaker.about.About" />
    </PreferenceScreen>

</PreferenceScreen>