<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013-2014 Jeroen Gorter <Lowerland@hotmail.com>

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. 
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_alert"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

	<ImageView
        android:id="@+id/Warningsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
         android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/compatibility_alert_title"
        android:src="@drawable/ic_warning" />
    <TextView
        android:id="@+id/compatibility_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/Warningsign"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/compatibility_alert_title"
        android:textSize="17sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/android_blue" />
    
	<View
		android:id="@+id/dummyvalue"
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="@color/blue_line"
    	android:layout_below="@+id/compatibility_alert_title"
    	android:layout_marginTop="0dp"
    	android:layout_marginLeft="0dp"
    	android:layout_marginRight="0dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/compatibility_alert_title"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="7dp"
        android:text="@string/compatibility_alert_body"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/checkBoxHIDEALERT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="10dp"
        android:text="@string/disable_popup_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="14sp" />
    
    	<View
		android:id="@+id/dummyvalue2"
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:background="@color/dialog_box_gray_line"
    	android:layout_below="@+id/checkBoxHIDEALERT"
    	android:layout_marginTop="0dp"
    	android:layout_marginLeft="0dp"
    	android:layout_marginRight="0dp"/>
    
    <Button
            android:id="@+id/btn_dialog_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_below="@+id/checkBoxHIDEALERT"
            android:layout_marginTop="1dp"
            android:layout_centerHorizontal="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_ok"
            android:onClick="onDialogOK" />

</RelativeLayout>