<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical" >

        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:text="@string/set_on_boot"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Switch
        android:id="@+id/set_on_boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp" />
        
        <TextView
        android:id="@+id/gaincontrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:text="@string/gain_control"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gaincontrol"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:text="@string/gpl_speaker_gain"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="1dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/back"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="sans" />

    <SeekBar
        android:id="@+id/sb_gpl_speaker_gain"
        android:max="30"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/textViewProgress" />

   	 <TextView
        android:id="@+id/gplmicgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="35dp"
        android:text="@string/gpl_mic_gain"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
        <SeekBar
        android:id="@+id/sb_gpl_mic_gain"
        android:max="30"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/gplmicgain"
        android:layout_toLeftOf="@+id/textViewProgress" />
        
        <TextView
        android:id="@+id/gplmicgainprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gplmicgain"
        android:layout_marginTop="1dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/back"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        android:textStyle="normal"
        android:typeface="sans" />

</RelativeLayout>