<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013-2014 Jeroen Gorter <Lowerland@hotmail.com>

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical" >

    <!-- Logo -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_cpu_tweaks" />

    <!-- Line below logo -->

    <View
        android:id="@+id/iddummy1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/logo"
        android:layout_marginTop="5dp"
        android:background="#698bdd" />

    <!-- Text CPU Governor -->

    <TextView
        android:id="@+id/cpugovernortitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/cpu_governor"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/android_blue" />

    <!-- Line below CPU Governor -->

    <View
        android:id="@+id/iddummy2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/cpugovernortitle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/gray_line" />

    <!-- *NEW* Touching BLOCK -->

    <View
        android:id="@+id/cpugovernortouchblock"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_below="@+id/iddummy2"
        android:layout_marginTop="0dp"
        android:background="@drawable/translucent_box"
        android:clickable="true"
        android:onClick="onCPUGOVERNOR" />

    <!-- text Option CPU Governor -->

    <TextView
        android:id="@+id/current_governor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cpugovernortitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/current_cpu_governor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Value CPU Governor -->

    <TextView
        android:id="@+id/CpuCurrentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/current_governor"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="2dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:typeface="sans" />

    <!-- Not Supported Text -->

    <TextView
        android:id="@+id/uncompatible_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/current_governor"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="2dp"
        android:text="@string/empty_string"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red_alert" />

    <!-- Line below CPU Governor -->

    <View
        android:id="@+id/iddummy3"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/current_governor"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="29dp"
        android:background="@color/translucent" />

    <!-- Text CPU Frequency Scaling -->

    <TextView
        android:id="@+id/cpufreqscaletitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iddummy3"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cpu_freq_scaling_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/android_blue" />

    <!-- Line below CPU Freq Scaling -->

    <View
        android:id="@+id/iddummy4"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/cpufreqscaletitle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/gray_line" />

    <!-- *NEW* Touching BLOCK -->

    <View
        android:id="@+id/minfreqscalingtouchblock"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_below="@+id/iddummy4"
        android:layout_marginTop="0dp"
        android:background="@drawable/translucent_box"
        android:clickable="true"
        android:onClick="onMINFREQSCALING" />

    <!-- text Current CPU min Freq Scaling -->

    <TextView
        android:id="@+id/textcurrentminfreqscale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iddummy4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:text="@string/min_frequency_scaling"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Value CPU min Freq Scaling -->

    <TextView
        android:id="@+id/CpuMinFreqValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textcurrentminfreqscale"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="2dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:typeface="sans" />

    <!-- Not Supported Text -->

    <TextView
        android:id="@+id/uncompatible_alert2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textcurrentminfreqscale"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="2dp"
        android:text="@string/empty_string"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red_alert" />

    <!-- Line between Min scaling and max scaling -->

    <View
        android:id="@+id/iddummy5"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/textcurrentminfreqscale"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="29dp"
        android:background="@color/gray_line" />

    <!-- *NEW* Touching BLOCK -->

    <View
        android:id="@+id/maxfreqscalingtouchblock"
        android:layout_width="fill_parent"
        android:layout_height="52dip"
        android:layout_below="@+id/iddummy5"
        android:layout_marginTop="0dp"
        android:background="@drawable/translucent_box"
        android:clickable="true"
        android:onClick="onMAXFREQSCALING" />

    <!-- text max Frequency Scaling -->

    <TextView
        android:id="@+id/textcurrentmaxfreqscale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/iddummy5"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:text="@string/max_fequency_scaling"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Value CPU max Freq Scaling -->

    <TextView
        android:id="@+id/CpuMaxFreqValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textcurrentmaxfreqscale"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="2dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:typeface="sans" />

    <!-- Not Supported Text -->

    <TextView
        android:id="@+id/uncompatible_alert3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textcurrentmaxfreqscale"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="2dp"
        android:text="@string/empty_string"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red_alert" />

</RelativeLayout>